Bug 949855 - No sound comes out when FM Radio is first time started. r=mchen, a=koi+